# dianm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Notes.md  README.md  cmake_install.cmake  dainm  dainm_tests
include/: DataGenerator.h  preprocessing.h
include/grad/: AutoGrad.h  Value.h  operators.h
src/: DataGenerator.cpp  main.cpp  preprocessing.cpp
tests/: tests.cpp
